--- a/home.css
+++ b/home.css
@@ -26,9 +26,7 @@ body{
 } */
 /* --------------------------------- */
 
-.home-feedback-section{
-    display: none;
-}
+
 
 /* DESCRIPTION SECTION */
 
@@ -110,11 +108,12 @@ body{
 }
 .right-description-btn{
     background: rgba(216, 88, 5, 0.26);
-    border: 1px solid #D85805;
+    border: 1px dashed #D85805;
     border-radius: 20px;
     font-weight: 700;
     color: #D85805;
     margin-bottom: 20px;
+
 }
 .college-code{
     font-weight: 700;
@@ -159,8 +158,8 @@ body{
 
 .home-deaprtments-box-wrapper{
     padding: 30px;
-    width: 261px;
-    height: 266px;
+    width: 20vw;
+    height: 21vw;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
@@ -237,17 +236,51 @@ body{
     gap:20px;
 }
 .home-gallery-wrapper{
-    background-color: #ececec;
     border-radius: 12px;
-    height: 40vw;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: 15vw 15vw 15vw 15vw ;
+    gap: 10px;
+}
+.home-gallery-img-box{
+    background-color: #d3d3d3;
+    border-radius: 10px;
+}
+.gallery-box-1{
+    grid-column:span 2;
+    grid-row:span 2;
 }
 
+.gallery-box-4{
+    grid-row:span 2;
+}
+
+.gallery-box-9{
+    grid-column:span 3;
+    grid-row:span 2;
+
+}
+.gallery-box-10{
+    grid-column:span 2;
+}
+.home-gallery-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    transition: all .5s ease-in-out;
+    
+}
+.home-gallery-img:hover{
+    filter: grayscale(70%);
+
+}
 /* STRENGTH SECTION */
 
 .home-strength-section{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     padding: 30px;
 }
 .strength-row{
@@ -256,12 +289,13 @@ body{
     align-items: center;
 }
 .home-strength-num{
-    font-size: 5vw;
+    font-size: 7vw;
     font-weight: 700;
 }
 
 .home-strength-title{
-    font-weight: 700;
+    font-size: 3vw;
+    font-weight: 500;
 }
 
 /* CAMPUS LIFE SECTION */
@@ -313,6 +347,99 @@ body{
 
 /* FEEDBACK SECTION */
 
+.home-feedback-section{
+    display: flex;
+    align-items: center;
+    padding: 30px;
+}
+.home-feedback-left{
+    width: 30%;
+    display: flex;
+}
+
+.home-feedback-heading{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.home-feedback-heading-line-1,.home-feedback-heading-line-2{
+    font-size: 4vw;
+    font-weight: 700;
+}
+.home-feedback-heading-line-1{
+    text-align: center;
+}
+.home-feedback-heading-line-2{
+    margin-top:-5%;
+    text-align: right;
+}
+.home-feedback-right{
+    width: 70%;
+    display: inline-block;
+
+}
+
+.home-feedback-box{
+    padding: 20px 10px;
+    background-color: #D9D9D9;
+    width: 18vw;
+    min-height: 22vw;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.home-feedback-box-bottom{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:left;
+    gap:10px;
+}
+
+.home-feedback-box-title{
+    font-size: 1vw;
+    font-weight: 700;
+
+}
+.home-feedback-box-name{
+    font-size: 1vw;
+    font-weight: 700;
+}
+.home-feedback-box-desig{
+    font-size: .9vw;
+    margin-top: -10%;
+    font-weight: 200;
+
+}
+
+.home-feedback-box-img-wrapper{
+    width: 3vw;
+    height: 3vw;
+    border-radius: 100%;
+}
+.home-feedback-box-img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 100%;
+}
+.home-feedback-box-container{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+}
+.home-feedback-box-wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 60vw;
+    overflow: hidden;
+    gap: 10px;
+    overflow-y: auto;
+}
 
 
 
@@ -494,5 +621,7 @@ body{
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
 }
+
+
 
 
