--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Righteous&display=swap');
 
 *{
     margin: 0;
@@ -20,6 +20,25 @@ body{
 }
 
 
+.red{
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background-color: rgba(255, 0, 0, 0.277);
+}
+.title-ex{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+}
+.white-box-wrapper{
+    height: 500px;
+    display: flex;
+
+}
+
+
 /* HEADER SECTION */
 .header-wrapper{
     width: 100%;
@@ -36,9 +55,15 @@ body{
 .logo-img{
     width: 58px;
     height: 58px;
+    animation-name: rotate-windows;
+    animation-iteration-count: 1;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
 }
 .logo-text{
     color: #D85805;
+    animation: 3s slide-right;
+    font-family: 'Righteous', cursive;
 }
 .header-nav-container{
     height: 100%;
@@ -52,10 +77,15 @@ body{
     display: flex;
     justify-content: flex-end;
 }
+
+
+
+
 .header-nav-elements{
     list-style-type: none;
     margin: auto 10px;
 }
+
 .header-nav-elements a{
     transition: all .1s ease-in-out;
 }
@@ -233,3 +263,50 @@ body{
     color: #949494;
     font-size: 80%;
 }
+
+
+
+
+
+
+
+
+@keyframes rotate-windows {
+    0% {
+      transform: perspective(500px) rotateY(90deg);
+      -webkit-transform: perspective(500px) rotateY(90deg);
+      -moz-transform: perspective(500px) rotateY(90deg);
+      -ms-transform: perspective(500px) rotateY(90deg);
+      -o-transform: perspective(500px) rotateY(90deg);
+    }
+    50% {
+      transform: perspective(500px) rotateY(180deg);
+      -webkit-transform: perspective(500px) rotateY(180deg);
+      -moz-transform: perspective(500px) rotateY(180deg);
+      -ms-transform: perspective(500px) rotateY(180deg);
+      -o-transform: perspective(500px) rotateY(180deg);
+    }
+    100% {
+      transform: perspective(500px) rotateY(0deg);
+      -webkit-transform: perspective(500px) rotateY(0deg);
+      -moz-transform: perspective(500px) rotateY(0deg);
+      -ms-transform: perspective(500px) rotateY(0deg);
+      -o-transform: perspective(500px) rotateY(0deg);
+    }
+  }
+
+
+  @keyframes slide-right {
+    0% {
+      margin-left: -100%;
+      color: white;
+    }
+    60%{
+        color: white;
+    }
+    100% {
+      margin-left: 0%;
+      color: #D85805;
+    }
+  }
+
