--- a/home.css
+++ b/home.css
@@ -48,9 +48,6 @@ a{
     width: 50%;
 }
 .left-description-title{
-    font-size: 2vw;
-    font-weight: 700;
-    line-height: 122%;
     margin-bottom: 10px;
 }
 .right-description-box-wrapper{
@@ -98,8 +95,6 @@ a{
 .right-description-title{
     margin-bottom: 10px;
     color: #D85805;
-    font-weight: 700;
-    font-size: 2vw;
 }
 .right-description-btn{
     background: rgba(216, 88, 5, 0.26);
@@ -194,9 +189,7 @@ a{
 .home-faculty-left{
     width: 50%;
 }
-.home-faculty-title{
-    font-size:3vw;
-}
+
 .home-faculty-right{
     width: 50%;
 }
@@ -296,7 +289,7 @@ a{
 
 .home-strength-title{
     font-size: 3vw;
-    font-weight: 500;
+    font-weight: 200;
 }
 
 /* CAMPUS LIFE SECTION */
@@ -308,9 +301,7 @@ a{
     padding: 30px;
     gap: 20px;
 }
-.home-campus-life-heading{
-    font-weight: 700;
-}
+
 .home-campus-life-wrapper{
     width: 100%;
     display: flex;
@@ -325,14 +316,6 @@ a{
 }
 .home-campus-life-right{
     width: 50%;
-}
-.home-campus-life-para{
-    font-size: 2vw;
-}
-.home-campus-life-title{
-    font-size: 4vw;
-    font-weight: 700;
-    line-height: 107%;
 }
 .home-campus-life-img-box{
     width: 100%;
@@ -363,10 +346,7 @@ a{
     display: flex;
     flex-direction: column;
 }
-.home-feedback-heading-line-1,.home-feedback-heading-line-2{
-    font-size: 4vw;
-    font-weight: 700;
-}
+
 .home-feedback-heading-line-1{
     text-align: center;
 }
@@ -397,25 +377,21 @@ a{
     gap:10px;
 }
 
-.home-feedback-box-title{
-    font-size: 1vw;
-    font-weight: 700;
 
-}
 .home-feedback-box-name{
-    font-size: 1vw;
+    font-size: 16px;
     font-weight: 700;
 }
 .home-feedback-box-desig{
-    font-size: .9vw;
+    font-size: 14px;
     margin-top: -10%;
     font-weight: 200;
 
 }
 
 .home-feedback-box-img-wrapper{
-    width: 3vw;
-    height: 3vw;
+    width: 40px;
+    height: 40px;
     border-radius: 100%;
 }
 .home-feedback-box-img{
@@ -452,13 +428,6 @@ a{
     gap: 20px;
     padding: 30px;
 }
-.home-events-heading{
-    font-weight: 700;
-}
-.home-events-title{
-    font-size: 2vw;
-    font-weight: 700;
-}
 .home-events-content-wrapper{
     width: 100%;
     display: flex;
@@ -491,7 +460,7 @@ a{
 }
 .home-events-box{
     width: 261px;
-    height:300px;
+    height:330px;
     border: 1px solid black;
     border-radius: 10px;
     padding: 20px;
@@ -503,13 +472,13 @@ a{
     display: flex;
     justify-content: space-between;
 }
+.home-events-box-row2{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0px;
+}
 
-.home-events-box-title{
-    font-weight: 700;
-}
-.home-events-box-para{
-    font-size: 13px;
-}
 .home-events-box-degree{
     border: 1px solid black;
     border-radius: 10px;
@@ -533,10 +502,7 @@ a{
     gap: 20px;
     padding: 30px;
 }
-.home-societies-heading{
-    font-size: 2vw;
-    font-weight: 700;
-}
+
 .home-societies-box-wrapper{
     width: 100%;
     display: flex;
@@ -582,10 +548,7 @@ a{
     flex-direction: column;
     gap: 20px;
 }
-.home-contact-directions-title{
-    font-size: 3vw;
-    font-weight: 700;
-}
+
 
 .home-contact-directions iframe{
     width: 40vw ;
@@ -614,10 +577,7 @@ a{
     flex-direction: column;
     gap: 20px;
 }
-.home-contact-get-in-touch-title{
-    font-size: 3vw;
-    font-weight: 700;
-}
+
 .home-contact-get-in-touch-wrapper input,textarea,button{
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
@@ -628,9 +588,28 @@ a{
 
 
 
+/* TITLES  */
 
+.titles{
+    font-size: 30px;
+    font-weight: 700;
+}
 
+/* HEADINGS */
+.headings{
+    font-weight: 700;
+}
 
+/* PARA */
+
+/* BOX PARA */
+.box-para{
+    font-weight: 300;  
+}
+/* BOX TITLE */
+.box-title{
+    font-weight: 500;
+}
 
 
   /* Large */
@@ -642,9 +621,7 @@ a{
     .home-sections{
         padding: 30px 10px;
     }
-    .left-description-title{
-        font-size: 22px;
-    }
+  
     .home-description-section{
         flex-direction: column;
     }
@@ -754,31 +731,24 @@ a{
     .home-feedback-box-wrapper{
         display: flex;
         flex-direction: row;
-        gap: 10px;
+        gap: 30px;
         overflow-x: auto;
         height: auto;
     }
     .home-feedback-box{
-        width: 200px;
-        height: 30vw;
+        min-width: 260px;
+        min-height: 315px;
         border-radius: 5px;
+        background-color: transparent;
+        border: 1px solid black;
     }
-    .home-feedback-box-title{
-        font-size: 1.5vw;
-        font-weight: 600;
-    }
-    .home-feedback-box-name{
-        font-size: 1.5vw;
-    }
-    .home-feedback-box-desig{
-        font-size: 1vw;
-    }
+/* 
     
     .home-feedback-box-img-wrapper{
         width:30px;
         height:30px;
         border-radius: 100%;
-    }
+    } */
     .home-faculty-section{
         flex-direction: column;
         gap: 10px;
@@ -792,22 +762,64 @@ a{
   }   
   /* Small */
   @media (width<768px) {
+    .home-sections:first-child{
+        border-radius: 5px;
+    }
     body{
         padding: 10px 0;
     }
-    .home-feedback-box{
-     padding: 5px ;
+    .home-contact-directions iframe{
+        width:100% ;
+        border-radius: 5px;
     }
 
   }
   /* Extra small */
   @media (width<576px) {
-    .left-description-title{
-        font-size: 19px;
+    body{
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
-    .home-feedback-box-img-wrapper{
-        width:20px;
-        height:20px;
-        border-radius: 100%;
+    .strength-row{
+        gap: 10px;
+    }
+    .titles{
+        font-size: 21px;
+        font-weight: 700;
+    }
+    .right-description-bottom{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .home-contact-directions{
+        padding: 10px;
+    }
+    .home-contact-directions-para{
+        width: 100%;
+    }
+    .home-contact-directions iframe{
+        width:100% ;
+        height: 70vw;
+    }
+    .left-description-box-container{
+        background: white;
+        box-shadow: none;
+        border-radius: 0;
+    }
+    .footer-container{
+        padding-top: 20px;
+        box-shadow: none;
+        border-radius: 0;
+        margin-bottom: 0;
+    }
+    .home-contact-get-in-touch{
+        background:none;
+        box-shadow: none;
+        border-radius: 0;
+    }
+    .home-contact-directions{
+        background:none;
+        box-shadow: none;
+        border-radius: 0;
     }
   }
