--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body{
     justify-content: center;
 }
 .banner-img-wrapper{
-    background-color: rgb(242, 242, 242);
+    /* background-color: rgb(242, 242, 242); */
     width: 100%;
     aspect-ratio: 1/.3;
     border-radius: 40px;
@@ -377,6 +377,8 @@ body{
     }
     .banner-img{
         border-radius: 10px;
+        width: 100%;
+        height: 100%;
     }
     .logo-img-wrapper{
         width: 40px;
